[metadata]
# replace with your username:
name = ecanvci
version = 1.1.0
author = Xavier Yin
author_email = bug313@gmail.com
description = python interface for GCAN USB to CAN device (ECanVci)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xavieryin/ecanvci
project_urls =
    Bug Tracker = https://github.com/xavieryin/ecanvci/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
ecanvci = dll/*.dll, dll/*.lib